--- a/Android/MojingSDK/build.gradle
+++ b/Android/MojingSDK/build.gradle
@@ -20,7 +20,7 @@ android {
 dependencies {
     compile files('libs/MojingSDK.jar')
     compile files('libs/ZControllerLib-android-1.9.2.jar')
-    //compile files('libs/ZControllerLib-android-ui-1.9.2.jar')
+    compile files('libs/ZControllerLib-android-ui-1.9.2.jar')
     compile files('libs/ZControllerLib-common-1.9.2.jar')
     //compile files('libs/zc-strings-1.9.2.jar')
 }
