--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -24,5 +24,9 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:design:23.3.0'
     compile project(':dJISDKLIB')
+    compile files('libs/MojingSDK.jar')
+    compile files('libs/ZControllerLib-android-1.9.2.jar')
+    compile files('libs/ZControllerLib-android-ui-1.9.2.jar')
+    compile files('libs/ZControllerLib-common-1.9.2.jar')
     //compile project(':MojingSDK')
 }
