--- a/Android/app/build.gradle
+++ b/Android/app/build.gradle
@@ -23,4 +23,5 @@ dependencies {
     compile fileTree(include: ['*.jar'], dir: 'libs')
     compile 'com.android.support:design:23.3.0'
     compile project(':dJISDKLIB')
+    compile 'com.google.android.gms:play-services-appindexing:8.4.0'
 }
