--- a/XiaoDaiRobot/app/build.gradle
+++ b/XiaoDaiRobot/app/build.gradle
@@ -17,7 +17,7 @@ android {
         versionName "1.0"
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
         ndk {
-            abiFilters "armeabi-v7a", "armeabi"
+            abiFilters "armeabi-v7a", "armeabi", "x86", "x86_64"
         }
     }
     buildTypes {
