--- a/XiaoDaiRobot/app/src/main/AndroidManifest.xml
+++ b/XiaoDaiRobot/app/src/main/AndroidManifest.xml
@@ -49,7 +49,7 @@
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenLayout"
-            android:theme="@android:style/Theme.DeviceDefault.Light"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
