--- a/RobotControl/app/src/main/AndroidManifest.xml
+++ b/RobotControl/app/src/main/AndroidManifest.xml
@@ -2,6 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="cc.stargroup.robot.robotcontrol">
 
+    <uses-permission  android:name="android.permission.CAMERA"/>
+    <uses-permission  android:name="android.permission.INTERNET"/>
+    <uses-permission  android:name="android.permission.RECORD_AUDIO"/>
+    <uses-permission  android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
+    <uses-permission  android:name="android.permission.BLUETOOTH"/>
+    <uses-permission  android:name="android.permission.BROADCAST_STICKY"/>
+
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
