--- a/XiaoDaiRobot/app/build.gradle
+++ b/XiaoDaiRobot/app/build.gradle
@@ -36,4 +36,5 @@ dependencies {
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.volley:volley:1.0.0'
     testCompile 'junit:junit:4.12'
+    compile 'com.opentok.android:opentok-android-sdk:2.10.+'
 }
