--- a/XiaoDaiRobot/app/build.gradle
+++ b/XiaoDaiRobot/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     })
     compile 'com.android.support:appcompat-v7:24.2.1'
     compile 'com.android.volley:volley:1.0.0'
-    testCompile 'junit:junit:4.12'
     compile 'com.opentok.android:opentok-android-sdk:2.10.+'
+    compile 'com.android.support.constraint:constraint-layout:1.0.2'
+    testCompile 'junit:junit:4.12'
 }
