--- a/XiaoDaiRobot/app/src/main/AndroidManifest.xml
+++ b/XiaoDaiRobot/app/src/main/AndroidManifest.xml
@@ -13,12 +13,12 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.BLUETOOTH_ADMIN" />
     <uses-permission android:name="android.permission.BLUETOOTH" />
-    <uses-permission android:name="android.permission.CAMERA"/>
-    <uses-permission android:name="android.permission.INTERNET"/>
-    <uses-permission android:name="android.permission.RECORD_AUDIO"/>
-    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS"/>
-    <uses-permission android:name="android.permission.BLUETOOTH"/>
-    <uses-permission android:name="android.permission.BROADCAST_STICKY"/>
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.RECORD_AUDIO" />
+    <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
+    <uses-permission android:name="android.permission.BLUETOOTH" />
+    <uses-permission android:name="android.permission.BROADCAST_STICKY" />
 
     <application
         android:name=".RobotApplication"
@@ -28,43 +28,63 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
 
-        <!-- begin: baidu speech sdk-->
+        <!-- begin: baidu speech sdk -->
         <!-- 请填写应用实际的APP_ID -->
-        <meta-data android:name="com.baidu.speech.APP_ID" android:value="8797664"/>
+        <meta-data
+            android:name="com.baidu.speech.APP_ID"
+            android:value="8797664" />
         <!-- 请填写应用实际的API_KEY -->
-        <meta-data android:name="com.baidu.speech.API_KEY" android:value="G56bCafsmLnBo3RWTgpl7xDG"/>
+        <meta-data
+            android:name="com.baidu.speech.API_KEY"
+            android:value="G56bCafsmLnBo3RWTgpl7xDG" />
         <!-- 请填写应用实际的SECRET_KEY -->
-        <meta-data android:name="com.baidu.speech.SECRET_KEY" android:value="6787e3625d5f291e92f19f11500ab396"/>
-        <service android:name="com.baidu.speech.VoiceRecognitionService" android:exported="false" ></service>
+        <meta-data
+            android:name="com.baidu.speech.SECRET_KEY"
+            android:value="6787e3625d5f291e92f19f11500ab396" />
+
+        <service
+            android:name="com.baidu.speech.VoiceRecognitionService"
+            android:exported="false" />
+
         <activity
             android:name="com.baidu.voicerecognition.android.ui.BaiduASRDigitalDialog"
             android:configChanges="orientation|keyboardHidden|screenLayout"
-            android:theme="@android:style/Theme.Dialog"
             android:exported="false"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.Dialog">
             <intent-filter>
-                <action android:name="com.baidu.action.RECOGNIZE_SPEECH" ></action>
-                <category android:name="android.intent.category.DEFAULT" ></category>
+                <action android:name="com.baidu.action.RECOGNIZE_SPEECH" />
+
+                <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <!-- end : baidu speech sdk-->
+        <!-- end : baidu speech sdk -->
 
         <activity
             android:name=".MainActivity"
             android:configChanges="orientation|keyboardHidden|screenLayout"
-            android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
         <activity
             android:name=".DeviceList"
             android:configChanges="orientation|keyboardHidden|screenLayout"
-            android:theme="@android:style/Theme.DeviceDefault.Light"
-            android:screenOrientation="portrait">
-        </activity>
+            android:screenOrientation="portrait"
+            android:theme="@android:style/Theme.DeviceDefault.Light" />
+        <activity
+            android:name=".ControllerActivity"
+            android:label="@string/title_activity_controller" />
+        <activity
+            android:name=".PerceptionActivity"
+            android:label="@string/title_activity_perception" />
+        <activity
+            android:name=".ComputerVisionActivity"
+            android:label="@string/title_activity_computer_vision"></activity>
     </application>
 
 </manifest>
